# NEXUS

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  skills-lock.json
MOCK_DB/: 00_schema.sql  01_org_structure.sql  02_leaders_and_roles.sql  03_jd_templates.sql  04_leadership_genomes.sql  05_scenarios.sql  06_feedback_360.sql  07_performance_reviews.sql  08_interaction_rules.sql  09_historical_decisions.sql  10_vulnerability_and_cascades.sql  11_counterfactuals_and_compatibility.sql  README.md  gen_genomes.py  run_seed.sh
OUTPUT_REPORTS/: NEXUS-staff-report-1774800341218.docx
db/seed/: __init__.py  _ids.py  seed_all.py  seed_candidates.py  seed_embeddings.py  seed_historical_decisions.py  seed_leaders.py  seed_org_units.py  seed_scenarios.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
nexus_agent/: __init__.py  agent.py
nexus_agent/.adk/: session.db
src/: __init__.py  config.py  embeddings.py  supabase_client.py
src/agents/: __init__.py  agent.py  callbacks.py  prompts.py
src/api/: main.py
src/schemas/: __init__.py  agent_outputs.py  brief.py  chemistry.py  common.py  genome.py  scenario.py  staffing.py  vulnerability.py
src/services/: __init__.py  bias_correction.py  cascade_engine.py  compatibility_engine.py  genome_computation.py  portfolio_math.py  scenario_engine.py
src/tools/: __init__.py  brief_tools.py  diagnose_tools.py  learn_tools.py  orchestrator_tools.py  staff_tools.py
static/: index.html
(+51 files in other folders)
